--- a/README.adoc
+++ b/README.adoc
@@ -6,7 +6,7 @@ Clément Levallois <levallois@em-lyon.com>
 ifndef::imagesdir[:imagesdir: images]
 ifndef::sourcedir[:sourcedir: ../../main/java]
 
-Ce repo contient les documents de la Chaire Segeco, destinés à être diffusés publiquement et librement
+Ce repo contient les documents de la Chaire implid (anciennement Segeco), destinés à être diffusés publiquement et librement
 
 Licence :
 
@@ -14,6 +14,6 @@ Licence :
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />Ce(tte) œuvre est mise à disposition selon les termes de la <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Licence Creative Commons Attribution 4.0 International</a>.
 ++++
 
-Vous cherchez le site de la Chaire Segeco? C'est ici : https://emlyon.github.io/chaire-segeco
+Vous cherchez le site de la Chaire implid? C'est ici : https://emlyon.github.io/chaire-implid
 
 par https://clementlevallois.net[Clément Levallois], Professeur associé à https://www.em-lyon.com/fr[emlyon business school].
